--- a/homepage.html
+++ b/homepage.html
@@ -33,7 +33,7 @@
 	<h1 style="background-image: url('images/colloseum.jpg'); 
            background-size: cover; 
            background-position: center; 
-           color: white; 
+           color: black; 
            text-align: center; 
            padding: 20% 0; 
            font-size: 3rem;">
@@ -51,7 +51,7 @@
 		</a>
 	</div>
 
-	<h1>Check out my Instagram for more adventures!</h1>
+	<h1>+ check out my instagram for more eats, arts, and side quests!</h1>
 
 	<div align="center">
 		<blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/yeah.i.know.a.spot/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
