--- a/homepage.html
+++ b/homepage.html
@@ -11,9 +11,8 @@
 </head>
 
 	<body>
-		<div class="skip"><a href="#main">Skip to Main Content</a></div>
-	
 		<header>
+			<div class="skip"><a href="#main">Skip to Main Content</a></div>
 			<nav>
 				<ul>
 					<li><a href="homepage.html" class="underline">Welcome</a></li>
@@ -22,50 +21,42 @@
 					<li><a href="subscribe.html">Subscribe</a></li>
 				</ul>
 				<div class="logo">
-					<main id="main">
 						<img src="images/logo.png" alt="Yeah I Know a Spot Logo">
-					  </main> 
 				</div>
 			</nav>
 			<h1>Welcome to Yeah I Know A Spot</h1>
 		</header>
 
-	<h1 style="background-image: url('images/colloseum.jpg'); 
-           background-size: cover; 
-           background-position: center; 
-           color: black; 
-           text-align: center; 
-           padding: 20% 0; 
-           font-size: 3rem;">
-    Let's go on an adventure...
-</h1>
+		<main id="main"> 
+		
+		<h1 class="adventure-heading" aria-label="The Colosseum with the text 'Let's go on an adventure' on top">
+				Let's go on an adventure...
+		</h1>
+			  
+<h2 style="text-align: center;">If you want my latest city guides, you're in the right place!</h2>
 
-	<!-- Marquee Section from https://www.html.am/html-codes/marquees/html-scrolling-text.cfm-->
-	<div class="marquee-container">
-		<marquee behavior="scroll" direction="left" class="marquee-text">If you want my latest city guides, you're in the right place!</marquee>
-	</div>
-	
-	<div style="text-align: center;">
-		<a href="travelGuides.html">
-		  <button>Take me there</button>
-		</a>
-	</div>
+<div style="text-align: center;">
+ <a href="travelGuides.html">
+   <button>Take me there</button>
+ </a>
+</div>
 
-	<h1>+ check out my instagram for more eats, arts, and side quests!</h1>
+<h2 style="text-align: center;">+ check out my instagram for more eats, arts, and side quests!</h2>
 
-	<div align="center">
-		<blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/yeah.i.know.a.spot/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-		</blockquote>
-	</div>
-	<script async src="//www.instagram.com/embed.js"></script>
+<div>
+ <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/yeah.i.know.a.spot/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
+ </blockquote>
+</div>
+<script async src="//www.instagram.com/embed.js"></script>
+		</main>
 	  
 	<footer>
 		<p>Yeah I Know A Spot - All Rights Reserved</p>
 		<a href="https://www.instagram.com/yeah.i.know.a.spot/" target="_blank">
-			<img src="images/Instagram_icon.png" width=35px alt="Instagram link">
+			<img src="images/Instagram_icon.png" width=35px alt="Instagram Logo">
 		</a>
 		<a href="https://www.pinterest.com/yeahiknowaspot/" target="_blank">
-			<img src="images/Pinterest-logo.png" width=40px alt="Pinterest link">
+			<img src="images/Pinterest-logo.png" width=40px alt="Pinterest Logo">
 		</a>
 	</footer>
 </body>
